# yike

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs
src/assets/: end.aac
